# little-barcode

./: .gitignore  README.md  pom.xml
docs/: Präsentation.pptx  README.md
java/: LICENSE
java/main/src/: Main.java  QRCodeandBarcode.java  RegexValidator.java
java/src/: Main.java  RegexValidator.java  test.java
rust-app/: Cargo.toml  README.md
rust-app/src/: helper.rs  main.rs  ui.rs
rust-app/src/helper/: connect_wifi.rs  handler.rs  regex_check.rs
rust-app/src/lib/: handler.rs  regex_check.rs
rust-app/src/ui/: core.rs  layout.rs
rust-app/src/ui/core/: generate_code.rs  stack.rs
rust-app/src/ui/layout/: create_code.rs  create_home_page.rs
